Solved pom vulnerabilities. Updated deprecated methods.